1. Lucky Shrub/styles.css
:root {
    --primary-color: #E1F0DA;
    --secondary-color: #E9DAF0;
    --tertiary-color: #DAE1F0;
    --primary-font: cursive;
    --secondary-font: American Typewriter;
    --tertiary-color-opacity: #DAE1F099;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    background-image: url(https://i.imgur.com/zZltUtS.jpeg);
    background-origin: content-box;
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
}

body {
    position: relative;
    padding-bottom: 5rem;
    min-height: 100vh;
}

#header,
#footer {
    background-color: var(--primary-color, #E1F0DA);
    padding: 0.5rem;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#header {
    flex-direction: column;
    flex-wrap: wrap;
    row-gap: 1rem;
    font-size: 1.2rem;
    position: fixed;
    top: 0;
    z-index: 1;
    padding-bottom: 1rem;
}

#top-logo {
    width: 4rem;;
}

#top-logo,
#bottom-logo {
    margin-left: 5px;
}

#top-nav ul {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    column-gap: 1rem;
}

#top-nav li {
    list-style: none;
}

#top-nav a {
    text-decoration: none;
    color: black;
    padding: 0.5rem;
}

#top-nav a:hover {
    background-color: var(--tertiary-color, #DAE1F0);
    border-radius: 10px;
}

main {
    margin-top: 12rem;
    display: grid;
    padding-bottom: 2.5rem;
    row-gap: 1rem;
    padding: 1rem 0.25rem;
    font-family: var(--secondary-font, serif);
}

section {
    margin: 15px;
}

#promotionSection {
    border: 3px solid var(--secondary-color, #E9DAF0);
    border-radius: 10px;
    background-color: var(--tertiary-color-opacity);
    padding: 5px;
}

#promotionTitle {
    font-family: var(--primary-font);
    font-size: 2.1rem;
}
#promotionInfo {
    font-size: 1.2rem;
}

.nursery {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 16px;
    margin: 0 auto;
    padding: 20px 10px;
  }
  
  .nursery img {
    width: 100%;
    max-width: 350px;
    height: 300px;
    object-fit: cover;
    border-radius: 10px;
  }
  
  /* .nursery::after {
    content: "";
    width: 350px;
  } */

#disclaimer {
    text-align: right;
    background-color: var(--tertiary-color);
}

#articles {
    display: flex;
    gap: 1rem;
}

article {
    border: 3px solid var(--secondary-color, #E9DAF0);
    border-radius: 10px;
    background-color: var(--tertiary-color-opacity, #DAE1F0);
    text-align: center;
    flex: 1;
    padding: 5px;
}

article h3 {
    padding: 0.5rem 0;
    font-family: var(--primary-font, Apple Chancery);
    font-size: 1.7rem;
    text-align: center;
}

.article-img {
    width: 5rem;
    border: 3px solid var(--primary-color, #E1F0DA);
    background-color: var(--primary-color);
    padding: 3px;
}

blockquote p::before {
    content: '\201C';
}

blockquote p::after {
    content: '\201D';
}

section p {
  padding: 5px;
  background: var(--tertiary-color);
}

#footer {
    font-size: 0.85rem;
    position: absolute;
    bottom: 0;
}

#copyright,
#top-nav {
    margin-right: 5px;
}

#bottom-logo {
    width: 2rem;;
}

